--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-geolocation-service": "^5.3.1",
+    "expo-location": "~14.3.0",
+    "expo-linking": "~3.2.4",
+    "react-native-maps": "0.31.1",
+    "expo-clipboard": "~3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
